Removes lb- prefixes from css classes

--- a/src/books/grid/books-grid.html
+++ b/src/books/grid/books-grid.html
@@ -1,5 +1,4 @@
 <p>
   <a ui-sref="bookCreate" class="btn btn-primary">Add Book</a>
 </p>
-
-<div ui-grid="$ctrl.gridData" class="lb-books-grid__grid"></div>
+<div ui-grid="$ctrl.gridData"></div>
