--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
 </noscript>
 
 <script>
-  document.write('<p class="lb-loading" ng-if="!library.isLoaded">Loading</p>');
+  document.write('<p class="loading" ng-if="!library.isLoaded">Loading</p>');
 </script>
 
-<div class="lb-body-wrapper" style="visibility: hidden">
+<div class="body-wrapper" style="visibility: hidden">
   <header class="container">
     <h1>The Library</h1>
   </header>
