Implements grid pagination

--- a/src/books/grid/books-grid.html
+++ b/src/books/grid/books-grid.html
@@ -29,4 +29,4 @@
   <a ui-sref="bookCreate" class="btn btn-primary">Add Book</a>
   <button class="btn btn-default" ng-click="$ctrl.clearFilters()">Clear filters</button>
 </p>
-<div ui-grid="$ctrl.gridData"></div>
+<div ui-grid="$ctrl.gridData" ui-grid-pagination></div>
